# Sentinel-SRE-OpenEnv

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  environment.py  requirements.txt  rubrics.py
server/api/routes/: agent.py  environment.py
server/core/: deps.py
server/schemas/: reset.py
server/static/: style.css
server/templates/: index.html
sre_env/: __init__.py  inference.py  models.py
sre_env/constants/: prompts.py
sre_env/core/: client.py
sre_env/tests/: test_environment.py
sre_env/utils/: parser.py
